# uvr5-api

./: .gitignore  DEBUG_PATHS.md  DEPENDENCIES.md  DOWNLOAD_METHOD_COMPARISON.md  DOWNLOAD_OPTIMIZATION_FINAL.md  Dockerfile  GRACEFUL_SHUTDOWN_ANALYSIS.md  INSTALL_GUIDE.md  KAFKA_CONSUMER.md  KAFKA_TOPIC_FIX.md  MIGRATION.md  MODELS.md  README.md  app.py  check_gpu_support.py  check_kafka_consumer.py  check_redis_queue.sh  config.py  docker-compose.yml  download_models.py  download_models.sh  env.example  processor.py  pyproject.toml  redis_queue.py  requirements-gpu.txt  requirements.txt  restart_local.sh  start.sh  start_local.sh  status_local.sh  stop.sh  stop_local.sh  test_api.sh  test_graceful_shutdown.sh  uploader.py
