[project]
name = "uvr-api"
version = "0.2.0"
description = "UVR5 Audio Separation API Service with Redis Priority Queue"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-httpauth>=4.8.0",
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "audio-separator>=0.17.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.2.0",
    "tqdm>=4.66.0",
    "onnxruntime>=1.16.0",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "numpy>=1.24.0,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
